# schneeflocke

./: CMakeLists.txt  README.txt  build_win32.bat  changelog.txt  create_test_data.py  license.txt
apps/: CMakeLists.txt
apps/im_cmdline_client/: CmdLineClient.cpp  CmdLineClient.h  main.cpp
apps/schneeflocke/: CMakeLists.txt  schneeflocke.desktop
apps/schneeflocke/icons/: icons.qrc
apps/schneeflocke/src/: AppError.h  Controller.cpp  Controller.h  Model.cpp  Model.h  QtThreadGateway.cpp  QtThreadGateway.h  autostart.cpp  autostart.h  main.cpp  schneeflocke.rc  types.cpp  types.h
apps/schneeflocke/src/gui/: AuthUserDialog.cpp  AuthUserDialog.h  GUI.cpp  GUI.h  ProgressItemDelegate.cpp  ProgressItemDelegate.h  RemoveUserDialog.cpp  RemoveUserDialog.h  SettingsDialog.cpp  SettingsDialog.h  ShareFileDialog.cpp  ShareFileDialog.h  TransferWindow.cpp  TransferWindow.h  TrayIcon.cpp  TrayIcon.h
apps/schneeflocke/src/gui/ui/: adduserdialog.ui  connectionwindow.ui  mainwindow.ui  settingswindow.ui  sharefiledialog.ui  transferwindow.ui  userinfowindow.ui
apps/schneeflocke/src/modeladapters/: ConnectionList.cpp  ConnectionList.h  ShareList.cpp  ShareList.h  ShareToUserList.cpp  ShareToUserList.h  TransferList.cpp  TransferList.h  UserList.cpp  UserList.h
apps/schneeflocke/src/modeladapters/userlist/: HostItem.cpp  HostItem.h  LoadingItem.cpp  LoadingItem.h  ShareItem.cpp  ShareItem.h  UserItem.cpp  UserItem.h
apps/sf_cmdline_sharer/: main.cpp
cmake/Modules/: FindSFSerialization.cmake
doc/: authentication.txt  building.txt  codestyle.txt  jabber_pwds.txt  threadthoughts.txt
libflocke/: CMakeLists.txt  Doxyfile.in
libflocke/flocke/: SrcDoc.h  hardcodedLogin.h
libflocke/flocke/filesharing/: FileGetting.cpp  FileGetting.h  FileSharing.cpp  FileSharing.h
libflocke/flocke/filesharing/file_io/: DirectoryListing.cpp  DirectoryListing.h  DirectorySharingPromise.cpp  DirectorySharingPromise.h  DirectoryTransfer.cpp  DirectoryTransfer.h  FileSharingPromise.cpp  FileSharingPromise.h  FileTransfer.cpp  FileTransfer.h  GlobPromise.cpp  GlobPromise.h  Globber.cpp  Globber.h  RecursiveDirectoryListing.cpp  RecursiveDirectoryListing.h
libflocke/flocke/filesharing/tools/: WorkThread.cpp  WorkThread.h
libflocke/flocke/objsync/: DataTracker.cpp  DataTracker.h
libflocke/flocke/sharedlists/: SharedList.h  SharedListServer.cpp  SharedListServer.h  SharedListTracker.cpp  SharedListTracker.h
libschnee/: CMakeLists.txt  Doxyfile.in
libschnee/schnee/: Error.h  SrcDoc.h  schnee.cpp  schnee.h  settings.cpp  settings.h  sftypes.cpp  sftypes.h  winsupport.h
libschnee/schnee/im/: IMClient.cpp  IMClient.h
libschnee/schnee/im/slxmpp/: ConnectionManager.cpp  ConnectionManager.h  ServerlessXMPPClient.cpp  ServerlessXMPPClient.h
libschnee/schnee/im/xmpp/: BoshXMPPConnection.cpp  BoshXMPPConnection.h  DirectXMPPConnection.cpp  DirectXMPPConnection.h  (+12 more)
libschnee/schnee/net/: Channel.cpp  Channel.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  TLSCertificates.cpp  TLSCertificates.h  TLSChannel.cpp  TLSChannel.h  Tools.cpp  Tools.h  UDPEchoClient.cpp  UDPEchoClient.h  UDPSocket.cpp  UDPSocket.h  UDTServer.cpp  UDTServer.h  UDTSocket.cpp  UDTSocket.h  ZeroConfService.cpp  ZeroConfService.h  x509.cpp  x509.h
libschnee/schnee/p2p/: Authentication.cpp  Authentication.h  CommunicationComponent.h  CommunicationDelegate.h  CommunicationMultiplex.cpp  CommunicationMultiplex.h  ConnectionManagement.cpp  ConnectionManagement.h  DataPromise.h  DataSharingClient.h  DataSharingElements.cpp  DataSharingElements.h  DataSharingServer.cpp  DataSharingServer.h  Datagram.cpp  Datagram.h  DatagramReader.cpp  DatagramReader.h  InterplexBeacon.cpp  InterplexBeacon.h  Messaging.cpp  Messaging.h  PresenceManagement.h
libschnee/schnee/tools/: ArgSplit.cpp  ArgSplit.h  Base64.cpp  Base64.h  ByteArray.cpp  ByteArray.h  Deserialization.h  FileTools.cpp  FileTools.h  Log.cpp  Log.h  MicroTime.cpp  MicroTime.h  Path.cpp  Path.h  ResultCallbackHelper.h  Serialization.h  Singleton.h  SpeedMeasure.cpp  SpeedMeasure.h  ToString.h  Token.cpp  Token.h  Uri.cpp  Uri.h  XMLChunk.cpp  XMLChunk.h
libschneetest/: CMakeLists.txt  Doxyfile.in
libschneetest/schnee/test/: LocalChannel.cpp  LocalChannel.h  Network.cpp  Network.h  NetworkDispatcher.cpp  NetworkDispatcher.h  PseudoRandom.cpp  PseudoRandom.h  ResultCallbackHelper.h  SrcDoc.h  StandardScenario.cpp  StandardScenario.h  initHelpers.cpp  initHelpers.h  test.h  timing.cpp  timing.h
testcases/: CMakeLists.txt
testcases/flocke/filesharing/filesharing/: main.cpp
testcases/flocke/sharedlists/sharedlists/: main.cpp
testcases/flocke/tools/globtest/: main.cpp
testcases/schnee/im/slxmpp/: main.cpp
testcases/schnee/im/xml_stream/: main.cpp
testcases/schnee/im/xmpp_bosh/: main.cpp
testcases/schnee/im/xmpp_connection/: main.cpp
testcases/schnee/im/xmpp_contacts/: main.cpp
testcases/schnee/im/xmpp_stream/: main.cpp
testcases/schnee/net/deadline_timer/: main.cpp
testcases/schnee/net/dns_sd_testcase/: main.cpp
testcases/schnee/net/http/: main.cpp
testcases/schnee/net/tcpserver/: main.cpp
testcases/schnee/net/tcptest/: main.cpp
testcases/schnee/net/tls/: main.cpp
testcases/schnee/net/tlsserver/: main.cpp
testcases/schnee/net/udpechoclient/: main.cpp
testcases/schnee/net/udptest/: main.cpp
testcases/schnee/net/udtsocket/: main.cpp
testcases/schnee/p2p/async_stream/: main.cpp
testcases/schnee/p2p/authentication/: main.cpp
testcases/schnee/p2p/channelholder/: MyMsg.h  main.cpp
testcases/schnee/p2p/channels/: main.cpp
testcases/schnee/p2p/datasharingbasics/: DataSharingBasicsScenario.h  OutstandingDataPromise.h  SubDataPromise.h  SyncCounter.h  main.cpp
testcases/schnee/p2p/interplex/: main.cpp
testcases/schnee/p2p/transmission_test/: main.cpp
testcases/schnee/tools/async_ops/: main.cpp
testcases/schnee/tools/bind_demo/: main.cpp
testcases/schnee/tools/delegate_test/: main.cpp
testcases/schnee/tools/log_test/: main.cpp
testcases/schnee/tools/parse_xml_test/: main.cpp
testcases/schnee/tools/path/: main.cpp
(+78 files in other folders)
